--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,7 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
 # End of https://www.toptal.com/developers/gitignore/api/unity
+/[Aa]ssets/Plugins/*
+/[Aa]ssets/Plugins.meta
+/[Aa]ssets/google-services.json
+/[Aa]ssets/google-services.json.meta
